--- a/frontend/src/components/Footer/style.css
+++ b/frontend/src/components/Footer/style.css
@@ -1,19 +1,20 @@
 .footer{
   width: 100%;
-  min-height: 60px;
   background: rgba(72, 57, 114, 0.7);
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+  padding: 10px;
   color: white  !important;
-  padding: 20px;
 }
 
 .footer p{
+  color: white  !important;
+
   padding: 0 !important;
-  margin: 0  !important;
+  margin: 0  !important;  
 }
 .footer a{
   padding: 0 15px;
