--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -9,6 +9,9 @@ body{
   background-color: #F1F1F1;
 }
 
+select{
+  width: 200px !important;
+}
 .container{
   min-height: 100vh;
   background-color: white;
