--- a/frontend/src/pages/Login/login.css
+++ b/frontend/src/pages/Login/login.css
@@ -5,7 +5,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 .grid{
-    margin: 100px 0 0 0;
+    margin:60px 0 0 0;
+    
+}
+.grid_texto{
+    margin:20% 0 0 100px;
+    
 }
 
 .titulo_login{
@@ -18,6 +23,25 @@
     color: #483972;
     margin: 0 0 0 28px;
 }
+
+h1{
+font-family: Roboto;
+font-style: normal;
+font-weight: 900;
+font-size: 20px;
+line-height: 56px;
+color: #483972;
+}
+
+p{
+font-family: Roboto;
+font-style: normal;
+font-weight: 900;
+font-size: 17px;
+/* line-height: 42px; */
+color: #483972;
+}
+
 .img_login{
     height: 150px;
     width: auto;
@@ -47,21 +71,32 @@
     box-shadow: 0px 0px 4px  #3DE959;
     border-radius: 10px;
 }
+/* .Centro{
+    text-align: center;
+} */
+
 
 #buttonEntar{
     background-color: #483972;
-    border-radius: 9.82857px;
+    border-radius: 9.8px;
     width: 160px;
     height: 43px;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
-    font-size: 19.6571px;
+    font-size: 19px;
     line-height: 23px;
     text-align: center;
     color: #FFF;
-    margin: 54px 0 0 25%;
+    margin: 20px 0 0 80px;
+    
 }
 #buttonEntar:hover{
-    background-color: #7B61FF;;
+    background-color: #7B61FF;
+}
+
+@media  (min-width: 371px){
+    #buttonEntar{
+    margin: 20px 0 0 80px;
+    }
 }
