--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -3,3 +3,30 @@
     box-shadow: 3px 6px 3px rgba(100, 100, 100, 0.4);
 }
 
+.h1, h1{
+    color:#483972;
+    margin-block-end: 30px;
+    font-weight:bold;
+    font-size: 24px;
+    text-align: center;    
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.p1, p1{
+    color:#483972;
+    font-weight:bold;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.container{
+    margin-top: 10;
+}
+
+.form-group{
+    margin-top: 20px;       
+}
+
+.btn-primary{
+    
+    background-color:#483972;
+    border-color: #483972;
+}
