--- a/frontend/src/pages/CadastroResponsavel/style.css
+++ b/frontend/src/pages/CadastroResponsavel/style.css
@@ -7,9 +7,6 @@
 
 /* MOBILE FIRST */
 
-#imgResponsavel {
-    display: none;
-}
 
 .titulo {
     color: #483972;
@@ -157,6 +154,13 @@
     margin-bottom: 45px;
 }    
 
+@media only screen and (max-width: 999px) {
+    #imgRespon {
+        display: none;
+    }
+    
+}
+
 
 @media only screen and (min-width: 371px) {
     #btnEnviar {    
@@ -194,7 +198,13 @@
         
     }
 
-    #imgResponsavel {
+    #imgRespon {
+        margin-top: 5%;  
+        margin-right: 20%;
+        float: right;            
+    }
+
+    /*#imgResponsavel {
        display: block; 
     
        position: absolute;     
@@ -202,10 +212,12 @@
        margin-top: 5%;
        width: 512px;
        height: 512px;
-    }
+    }*/
 
     .formMenor {        
-        margin-left: -30%;            
+        margin-left: 10% !important;
+        
+                  
     }
 
     .titulo {
