--- a/frontend/src/pages/Login/login.css
+++ b/frontend/src/pages/Login/login.css
@@ -4,6 +4,8 @@
 } */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
+/* MOBILE FIRST */
+
 .grid{
     margin:0 0 0 -30px;
 }
@@ -25,17 +27,16 @@
     margin-top: 50px;
 }
 
-#inputsenha{
-    width: 320px;
+.input{
+    width: 100%;
     height: 56px;
     background: #FFFFFF;
-    border: 1px solid #3DE959;
+    border: 1px solid #DEDEDE;
     box-sizing: border-box; 
-    box-shadow: 0px 0px 4px  #3DE959;
     border-radius: 10px;
 }
 .input:hover{
-    width: 320px;
+    width: 100%;
     height: 56px;
     background: #FFFFFF;
     border: 1px solid #3DE959;
@@ -67,8 +68,48 @@
     background-color: #7B61FF;
 }
 
-/* @media  (min-width: 371px){
-    #buttonEntar{
-    margin: 20px 0 0 80px;
+/* AJUSTES PARA Responsividade */
+@media  (min-width: 540px){
+    .titulo_login{
+        font-size: 28px;    
+        line-height: 30px;
+        margin-left: 60px;
     }
-} */
+
+}
+
+@media  (min-width: 721px){
+    .titulo_login{
+        font-size: 35px;    
+        line-height: 35px;
+        margin-left: 50px;
+    }
+    .img_login{
+        height: 250px;
+        width: auto;
+        margin-top: -30px;
+        margin-bottom: -10%;
+    }
+   
+} 
+
+
+
+
+@media  (min-width: 992px){
+    .titulo_login{
+        font-size: 50px;    
+        font-style: normal;
+        line-height: 60px;
+        align-items: center;
+        margin-left: 75px;
+    }
+    .img_login{
+        height: 325px;
+        width: auto;
+        margin: 0 0 0 -2%;
+    }
+    .input{
+        top: 210px;
+    }
+} 
