--- a/frontend/src/components/Header/style.css
+++ b/frontend/src/components/Header/style.css
@@ -1,6 +1,6 @@
 .menu{
   background:#483972;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   height: 60px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   justify-content: space-between;
