--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -158,3 +158,9 @@ h1,h2,h3,h4,h5,h6{
 .listagem a{
   text-decoration: none !important;
 }
+
+@media only screen and (max-width: 400px) {
+  .container {
+    padding: 8px;
+  }
+}
