--- a/frontend/src/pages/Oficial/style.css
+++ b/frontend/src/pages/Oficial/style.css
@@ -128,14 +128,12 @@ p{
 }
 
 
-/* #test{
+#MedidaParaNaoRolarAPagina{
     margin: 0 8px;
-} */
+} 
 
 .fundo_card{
-    /* left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)  */
+    margin-bottom: 15%;
 }
 /* .col_card{
     padding:0 10px;
@@ -143,10 +141,14 @@ p{
 
 
 .img_card{
-    /* width: 42px;
-    height: 42px; */
-    /* max-width: 43px; */
-    /* margin: 15px 0 20px 25%; */
+    margin-top: 30px;
+    width: 42px;
+    height: 42px;
+    position: relative;
+    /* top: 50%; */
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
 
 
@@ -154,14 +156,14 @@ p{
     /* width: 98px;
     height: 67px; */
 
-    /* font-family: Roboto;
+    font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
     line-height: 14px;
     text-align: center;
     color: #000000;
-    margin: 0 0 0 0; */
+    margin: 0 0 0 0;
 }
 
 
@@ -171,7 +173,7 @@ p{
 
 
 
-@media (min-width: 540px){
+/* @media (min-width: 540px){
     #fundo_inicio{
         background-image: url("Fundo_grade.png");
         width: 100%;
@@ -206,4 +208,4 @@ p{
         
     }
     
-}
+} */
