--- a/frontend/src/pages/Oficial/style.css
+++ b/frontend/src/pages/Oficial/style.css
@@ -67,26 +67,41 @@ p{
     color: #483972;
 } 
 
- #gird_objetivo{
+ /* .gird_objetivo{
     margin: 0 0 0 10% ;
-    /* margin: 0 0 0 8px ; mobile    */
-}
+    margin: 0 0 0 8px ; mobile   
+    padding: 0 0;
+    margin: 0 0 0 0;
+    width: auto;
+    height: auto; 
+    padding-left: 0;
+} */
 
 .texto_imagem{
-    /* width: 146px;
-    height: 79px; */
+    width: auto;
+    height: 79px;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 16px;
     color: #483972;
-    text-align: center
+    text-align: left; 
+    padding: 0 0 0 34px;
+    /* margin: 0 34px 0 34px; */
 }
 
 #img_nosso_objetivo{
-    width: 130px;
-    height: 90px;
+    width: 100%;
+    height: 15%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15%;
+    /* position: static;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) */
 }
 /* .centralizarTitulo{
     left: 50%;
@@ -135,22 +150,16 @@ p{
 .fundo_card{
     margin-bottom: 15%;
 }
-/* .col_card{
-    padding:0 10px;
-} */
-
 
 .img_card{
     margin-top: 30px;
     width: 42px;
     height: 42px;
     position: relative;
-    /* top: 50%; */
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
 }
-
 
 .p_card{
     /* width: 98px;
