--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -7,6 +7,7 @@
 
 body{
   background-color: #F1F1F1;
+  /* overflow-x: hidden;  */
 }
 
 select{
@@ -124,3 +125,4 @@ h1,h2,h3,h4,h5,h6{
 .listagem a{
   text-decoration: none !important;
 }
+
