--- a/frontend/src/pages/CadastroAluno/style.css
+++ b/frontend/src/pages/CadastroAluno/style.css
@@ -1,15 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
+
+
 .main {
     background-color: white;
+    width: 100vw;
 }
+
 
 
 /* MOBILE FIRST */
 
-/*#imgResponsavel {
-    display: none;
-}*/
+@media only screen and (max-width: 1000px) {
+    #imgAlunos {
+        display: none;
+    }
+}
 
 .titulo {
     color: #483972;
@@ -109,7 +115,7 @@
 }
 
 #campoUf {    
-    width: 320px !important;
+    width: 320px !important ;
     height: 56px;
     left: 20px;
     top: 262px;
@@ -174,6 +180,7 @@
 
 #caixaTexto {
     margin-top: 5%;
+    width: 320px;
 }
 
 #btnEnviar {    
@@ -197,6 +204,65 @@
     margin-right: 10px;
     margin-bottom: 45px;
 }    
+
+@media only screen and (max-width: 320px) {
+
+    .titulo {
+        color: #483972;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 700;
+        font-size: 24px;   
+        
+    }
+
+    .formulario {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 5%;
+    }
+
+    #campoNome {    
+        width: 260px !important;
+    }
+
+    #campoNascimento {
+        width: 260px !important;
+    }
+
+    #campoMatricula {
+        width: 260px !important;
+    }
+
+    #campoUf {
+        width: 260px !important;
+    }
+
+    #campoCidade {
+        width: 260px !important;
+    }
+
+    #campoBairro {
+        width: 260px !important;
+    }
+
+    #campoEscola {
+        width: 260px !important;
+    }
+
+    #caixaTexto {
+        width: 260px !important;
+    }
+
+    .btnAvatar {
+        background-color: transparent ;
+        margin-top: 5%;
+        margin-right: 2% !important;
+    }
+
+}
+
 
 /* AJUSTE BOTAO */
 
@@ -235,21 +301,15 @@
         background-color: white;
         
     }
-
-    #imgResponsavel {
-       display: block;     
-       position: absolute;     
-       margin-left: 35%;   
-       margin-top: 5%;
-       width: 512px;
-       height: 512px;
+    #imgAlunos {            
+        margin-top: 5%;  
+        margin-right: 10%;
+        float: right;            
     }
-
-    .formMenor {        
-        margin-left: -30%;            
+    .formMenor {               
+        margin-left: 0% !important;                
     }
-
-    .titulo {
+   .titulo {
         color: #483972;
         font-family: 'Roboto', sans-serif;
         font-weight: 900;
@@ -260,37 +320,25 @@
     }
     
 
-    .subtitulo1 {
+    /*.subtitulo1 {
         color: #483972;
         font-family: 'Roboto', sans-serif;
         font-weight: 700;
         font-size: 18px;
         margin-top: 15px;
         margin-left: 0%; 
-    }
+    }*/
     
-    .subtitulo2 {
+   /* .subtitulo2 {
         color: #483972;
         font-family: 'Roboto', sans-serif;
         font-weight: 700;
         font-size: 18px;
         margin-top: 15px;
         margin-left: 0%; 
-    }
-
-    #campoNome {    
-        width: 410px;
-        height: 56px;
-        left: 20px;
-        top: 262px;
-        background: #FFFFFF;
-        border-radius: 10px;    
-        border: 1px solid #DEDEDE;
-    }
-    
+    }   */   
     
   }
-
 
 .btnAvatar {
     background-color: transparent ;
