--- a/frontend/src/pages/Oficial/style.css
+++ b/frontend/src/pages/Oficial/style.css
@@ -3,10 +3,11 @@ body {
     background-color: #ffffff;
 }
 #fundo_inicio{
-    background-image: url("Rectangle2_home.png") ;
-    width: 100%;
+    background-image: url("../../assets/Rectangle2_home.png") ;
+    width: 100%; 
     height: 550px;
     padding: 45px 0 0 37px;
+    overflow:hidden;
 }
 
 .h1_titulo{
@@ -67,15 +68,6 @@ p{
     color: #483972;
 } 
 
- /* .gird_objetivo{
-    margin: 0 0 0 10% ;
-    margin: 0 0 0 8px ; mobile   
-    padding: 0 0;
-    margin: 0 0 0 0;
-    width: auto;
-    height: auto; 
-    padding-left: 0;
-} */
 
 .texto_imagem{
     width: auto;
@@ -98,17 +90,7 @@ p{
     margin-left: auto;
     margin-right: auto;
     margin-top: 15%;
-    /* position: static;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%) */
 }
-/* .centralizarTitulo{
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%) 
-} */
-
 #espacamento_h2{
     margin-top: 81px;
 }
@@ -175,46 +157,172 @@ p{
     margin: 0 0 0 0;
 }
 
-
-
-
-
-
-
-
-/* @media (min-width: 540px){
+@media (min-width: 540px){
     #fundo_inicio{
-        background-image: url("Fundo_grade.png");
+        background-image: url("../../assets/Fundo_grade.png");
         width: 100%;
         height: 550px;
         padding: 45px 0 0 37px;
+        align-items: center;
     }
+    .h1_titulo{
+        width: 100%;
+        height: auto;
+        top: 1350px; 
+        font-size: 28px;
+        line-height: 32px;
+        margin-top: 10%;
+        margin-left: 10%;
+    }
+    p{
+        font-size: 19px;
+        line-height: 21px;
+        margin-top: 10%;
+        margin-left: 10%;
+    }
+    .button{
+        margin-top: 15%;
+    }
+
+    .img_card{
+        width: 40%;
+        height: auto;
+        margin-top: 20%;
+    }
+    .texto_imagem{
+        width: auto;
+        height: 15%;
+        font-size: 16px;
+        line-height: 20px;
+        padding: 0 25% 0 20%;
+    }
+    #img_nosso_objetivo{
+        width: 90%;
+        height: 15%;
+        margin-top: 5%;
+    }    
+    .fundo_card{
+        padding: 6% 5% 15% 5%;
+        box-shadow: 1px 1px 1px #DCDCDC;
+        background-color: #FAFAFA;
+    } 
+
 }
 
-
-
 @media (min-width: 721px){
+    .button{
+        margin-top: 20%;
+    }
+    .texto_imagem{
+        width: auto;
+        height: 15%;
+        font-size: 18px;
+        line-height: 22px;
+        padding: 0 25% 0 20%;
+    }
+
+    #img_nosso_objetivo{
+        width: 80%;
+        height: 20%;
+        margin-top: 5%;
+    }    
+
+    .fundo_card{
+        padding: 6% 5% 15% 5%;
+        box-shadow: 1px 1px 1px #DCDCDC;
+        background-color: #FAFAFA;
+    } 
+
 
 }
 @media (min-width: 992px){
     #fundo_inicio{
-        background-image: url("Fundo_grade.png");
+        background-image: url("../../assets/Fundo_grade.png");
         width: 100%;
         height: 550px;
         padding: 45px 0 0 37px;
     }
-}
 
-@media (min-width: 1140px){
-    #fundo_inicio{
-        background-image: url("Fundo_grade.png");
+    .h1_titulo{
         width: 100%;
-        height: 540px;
-        padding: 45px 0 0 37px;
+        height: auto;
+        font-size: 48px;
+        line-height: 53px;
+        top: 0; 
+        margin-top: 6%;
+        margin-left: 10%;
     }
+    p{
+        font-size: 36px;
+        line-height: 42px;
+        margin-left: 10%;
+        margin-top: 48px;
+    }
+
     .button{
         display: none;
-        
     }
-    
-} */
+
+    h2{
+        font-size: 45px;
+        line-height: 53px;
+    }
+    .texto_imagem{
+        font-size: 35px;
+        line-height: 40px;
+        width: auto;
+        height: auto;
+        margin-left: 20%;
+        padding: 0 0 0 0;
+        width: auto;
+        height: 240px;
+    }
+
+    .p_res_920{
+        font-size: 30px;
+        line-height: 36px;
+ 
+    }
+
+
+    /*p{
+
+    }
+    .texto_imagem{
+        font-size: 36px;
+        line-height: 42px;
+        width: 472px;
+        height: 256px;
+        margin-left: 20%;
+    }
+    #img_nosso_objetivo{
+        width: 60%;
+        height: 15%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-left: 35%;
+        margin-top: 0;
+    }*/
+
+}
+
+@media (min-width: 1150px) {
+    .fundo_card{
+        position: relative;
+        right: 50%;
+        left: 5%;
+        transform: translate(50%, 0);
+        background-color: #FAFAFA;
+        margin: 0 0 5% 0;
+        padding: 6% 5% 15% 5%;
+        box-shadow: 1px 1px 1px #DCDCDC;
+    }
+
+    .img_card{
+        width: 45%;
+        height: auto;
+        
+    }     
+
+}
