--- a/frontend/src/pages/CadastroAluno/style.css
+++ b/frontend/src/pages/CadastroAluno/style.css
@@ -1,12 +1,7 @@
 
-
-
-.main {
-    background-color: white;
-    width: 100px;
+.mainCadAluno {
+    background-color: white;    
 }
-
-
 
 /* MOBILE FIRST */
 
@@ -31,7 +26,8 @@
     font-weight: 700;
     font-size: 18px;
     margin-top: 15px;
-    margin-left: 0%; 
+    margin-left: 2%; 
+    text-align: left;
 }
 
 .subtitulo2 {
@@ -40,7 +36,8 @@
     font-weight: 700;
     font-size: 18px;
     margin-top: 15px;
-    margin-left: 0%; 
+    margin-left: 2%; 
+    text-align: left; 
 }
 
 .subtitulo3 {
