--- a/frontend/src/pages/Home/style.css
+++ b/frontend/src/pages/Home/style.css
@@ -16,21 +16,22 @@
     margin-bottom: 5%;
 }
 
-.subtitulo {
+.subtituloHome {
     text-align: left;
     color: #483972;
     font-size: 18px;  
     font-weight: 500;
     font-family: 'Roboto', sans-serif;
-    
+    margin-top: 2%;
 }
 
-.subtitulo2 {
+.subtituloHome2 {
     text-align: center;
     color: #483972;
     font-size: 18px;  
     font-weight: 500;
     font-family: 'Roboto', sans-serif;
+    margin-top: 2%;
 }
 
 .sad {
@@ -65,7 +66,7 @@
         font-size: 24px;  
     }
 
-    .subtitulo {
+    .subtituloHome {
         display: flex;
         justify-content: center;
         align-items: center     ;
@@ -79,7 +80,7 @@
         flex-direction: column;
     }
 
-    .subtitulo2 {
+    .subtituloHome2 {
         margin-top: 5% !important;
         font-size: 24px !important;
     }
