--- a/frontend/src/pages/Login/login.css
+++ b/frontend/src/pages/Login/login.css
@@ -27,7 +27,6 @@ body{
     color: #483972;
     margin: 0 0 0 28px;
 }
-
 .img_login{
     height: 150px;
     width: auto;
@@ -38,21 +37,21 @@ body{
 }
 
 #input_login{
-    width: 100%;
-    height: 56px;
-    background: #FFFFFF;
-    border: 1px solid #DEDEDE;
-    box-sizing: border-box; 
-    border-radius: 10px;
+    width: 100% !important;
+    height: 56px !important;
+    background: #FFFFFF !important;
+    border: 1px solid #DEDEDE !important;
+    box-sizing: border-box !important; 
+    border-radius: 10px !important;
 }
 #input_login:hover{
-    width: 100%;
-    height: 56px;
-    background: #FFFFFF;
-    border: 1px solid #3DE959;
-    box-sizing: border-box; 
-    box-shadow: 0px 0px 4px  #3DE959;
-    border-radius: 10px;
+    width: 100% !important;
+    height: 56px !important;
+    background: #FFFFFF !important;
+    border: 1px solid #3DE959 !important;
+    box-sizing: border-box !important; 
+    box-shadow: 0px 0px 4px  #3DE959 !important;
+    border-radius: 10px !important;
 } 
 
 
@@ -80,7 +79,22 @@ body{
     background-color: #7B61FF;
     border-color:#7B61FF ;
 }
+@media (min-width: 320px){
 
+  .h2_titulo_login{
+      font-family: Roboto, sans-serif;
+      font-size: 20px; 
+      line-height: 24px;   
+      font-style: normal;
+      font-weight: 900;
+      text-align: left;
+      color: #483972;
+  }
+  .img_login{
+      height: 100px;
+      width: auto;
+  } 
+}
 
 @media (min-width: 540px){
     .div_texto{
@@ -104,111 +118,118 @@ body{
     .div_texto{
         display: block;
     }
+    .grid{
+      padding: 20px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+      border-radius: 20px;
+      margin-bottom: 5%;
+      width: 335px; 
+      /* height: auto;  */
+    
+  }  
+  .h2_titulo_login{
+    font-size: 24px; 
+    line-height: 28px;   
+    /* margin: 0 0 0 28px; */
+    width: 146px;
+    height: 113px;
+  }
 
 }
 
 @media (min-width: 992px){
-    .div_texto{
-        display: block;
-        margin-top: 20%;
-        margin-left: 10%;
-        margin-right: 8%;
-        
-    }
-    #h1_login{
-        font-size: 48px;
-        line-height: 56px;
-        margin-bottom: 40px;
-    }
-    #p_login{
-        font-size: 24px;
-        line-height: 28px;
-    }
-    .grid{
-        /* border-style: solid; */
-        /*  border: 2px solid black; */
-        padding: 20px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
-        border-radius: 20px;
-        margin-bottom: 5%;;
+  .div_texto{
+      display: block;
+      margin-top: 20%;
+      margin-left: 10%;
+      margin-right: 8%;
       
-    }
-    #espacamento_texto_img{
-        margin-bottom: 15%;
-    }
-    #form{
-        margin-top: 8%;
-    }
+  }
+  #h1_login{
+      font-size: 40px;
+      line-height: 56px;
+      margin-bottom: 40px;
+  }
+  #p_login{
+      font-size: 22px;
+      line-height: 26px;
+  }
+  .grid{
+      padding: 20px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+      border-radius: 20px;
+      margin-bottom: 5%;
+      width: 382px;
+      /* height: auto;  */
+    
+  }
+  #espacamento_texto_img{
+      margin-bottom: 15%;
+      margin-top: 8%;
+  }
+  #form{
+      margin-top: 8%;
+      margin-bottom: 4%;
+  }
+  .h2_titulo_login{
+    font-size: 24px; 
+    line-height: 28px;   
+    /* margin: 0 0 0 28px; */
+    width: 146px;
+    height: 113px;
+  }
+  .img_login{
+      height: 100%;
+      width: auto;
+  } 
+
+}
+
+@media (min-width: 1200px){
+  .div_texto{
+    display: block;
+    margin-top: 20%;
+    margin-left: 10%;
+    margin-right: 8%;
+    
+  }
+  #h1_login{
+    font-size: 48px;
+    line-height: 56px;
+    margin-bottom: 40px;
+  }
+  #p_login{
+    font-size: 24px;
+    line-height: 28px;
+    width: 479px;
+    height: 250px;
+  }
+  .grid{
+    width: 382px;
+    /* height: auto;  */
+    height: 500px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+
+  #espacamento_texto_img{
+    margin-top:62px;
+    margin-bottom:60px;
+    
+  } 
+  .h2_titulo_login{
+    width: 146px;
+    height: 113px;
+  }
+  #form{
+    margin-top: 0;
+    /* margin-bottom: 4%; */
+  }
+  .img_login{
+    height: 100%;
+    width: auto;
+    margin-top:60px;
+  } 
 
 
-    /* <Col sm={6}>Do outro lado
-      <Row>
-        
-        <Col sm={6}> Texto
-
-        </Col>
-        <Col sm={6}> Imagem
-
-        </Col>
-        
-        <Col sm={12}> input
-        </Col>      
-      </Row> */
-
-
-          /* Pagina funcioando
-          
-          
-          <Col sm={6}>
-            <div className="grid">
-              <Row>
-                <div id='espacamento_texto_img'>
-                  <h2 className="h2_titulo_login">
-                    Faça o login <br />e vamos <br />
-                    mudar o<br /> mundo!
-                  </h2>
-                </div>
-                <div>
-                  <img
-                    className="img_login"
-                    alt="imagem ilustrativa login"
-                    src={imagemlogin}
-                  />
-                </div>
-              </Row>
-
-              <Form id="form" onSubmit={handleSubmit}>
-                <Form.Group>
-                  <Form.Control
-                   
-                    id="input_login"
-                    type="email"
-                    placeholder="Email"
-                    onChange={handleInputChange}
-                    name="email"
-                  />
-                </Form.Group>
-
-                <Form.Group>
-                  <Form.Control
-                    id="input_login"
-                    onChange={handleInputChange}
-                    name="password"
-                    type="password"
-                    placeholder="Senha"
-                  />
-                </Form.Group>
-                {erro && <span className="erro">Email e/ou senha inválidos.</span>}
-
-                  <div id="buttom_div">
-                    <Button id="buttonEntar" type="submit">
-                      Login
-                    </Button>
-                  </div> */
-                                 /* <Link to="/cadastroResponsavel">Cadastro responsável</Link>
-                <Link to="/cadastroLoja">Cadastro Loja</Link> */
-              /* </Form>
-            </div>
-            
-          </Col> */
 }
