--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -72,12 +72,15 @@ input:not([type="checkbox"]):hover, select:hover, textarea{
   margin: 10px;
   height: 150px;
   padding: 20px;
-    background-color: #fff !important;
+  background-color: #fff !important;
   border-radius: 8px;
   flex: 1;
-  align-items: center;
-  
+  align-items: center;  
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.btnVerLista:hover {
+  background-color: #7B61FF;
 }
 .listaAluno:hover{
   background-color: rgb(204, 219, 241);
