--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -104,7 +104,7 @@ input:not([type="checkbox"]):hover, select:hover, textarea{
 }
 
 .produto{
-  height: 43px;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -135,12 +135,14 @@ input:not([type="checkbox"]):hover, select:hover, textarea{
   width: 81px;
  
   border-radius: 50%;
-  margin: auto;
+  
 }
 .info-produto{
   display: flex;
   justify-content: space-between;
+  vertical-align: middle;
   width: 100%;
+  
 }
 
 .btn-primary {
